--- a/annuaire-web/src/main/webapp/resources/css/main.css
+++ b/annuaire-web/src/main/webapp/resources/css/main.css
@@ -117,6 +117,10 @@ label.light {
 
 }
 
+.container {
+
+}
+
 .card-container.card {
     padding: 40px 40px;
     border-radius: 8px;
@@ -135,5 +139,33 @@ label.light {
     -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.btn {
+    background-color: rgb(104, 145, 162);
+    padding: 0px;
+    font-weight: 700;
+    font-size: 14px;
+    height: 36px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    border: none;
+    -o-transition: all 0.218s;
+    -moz-transition: all 0.218s;
+    -webkit-transition: all 0.218s;
+    transition: all 0.218s;
+}
+
+.btn.btn-submit:hover,
+.btn.btn-submit:active,
+.btn.btn-submit:focus {
+    background-color: rgb(12, 97, 33);
+}
+
+.btn.btn-cancel:hover,
+.btn.btn-cancel:active,
+.btn.btn-cancel:focus {
+    background-color: rgb(255, 50, 80);
 }
 
