--- a/annuaire-web/src/main/webapp/resources/css/table.css
+++ b/annuaire-web/src/main/webapp/resources/css/table.css
@@ -4,18 +4,24 @@
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
 }
 
+
 .table {
-    width: 100%;
-    max-width: 80%;
+    width:70%;
+    margin-left:15%;
+    margin-right:15%;
     margin-bottom: 2rem;
     background-color: #fff;
+    /* shadows and rounded borders */
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 .table > thead > tr,
 .table > tbody > tr,
 .table > tfoot > tr {
-    -webkit-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
 }
 .table > thead > tr > th,
 .table > tbody > tr > th,
@@ -27,9 +33,6 @@
     padding: 1.6rem;
     vertical-align: top;
     border-top: 0;
-    -webkit-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
 }
 .table > thead > tr > th {
     color: #757575;
