--- a/annuaire-web/src/main/webapp/resources/css/pagination.css
+++ b/annuaire-web/src/main/webapp/resources/css/pagination.css
@@ -1,5 +1,10 @@
 .pagination-wrapper {
-    width: 400px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    text-align: center;
 }
 
 .pagination {
