--- a/annuaire-web/src/main/webapp/resources/css/containers.css
+++ b/annuaire-web/src/main/webapp/resources/css/containers.css
@@ -5,7 +5,20 @@
 }
 
 .btn-container {
-    width:70%;
-    margin-left:15%;
-    margin-right:15%;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+    text-align: center;
+}
+
+.btn-container button {
+    display: inline-block;
+    width: 15%;
+    margin: 0 auto;
+}
+
+.btn-container a button {
+    display: inline-block;
+    width: 15%;
+    margin: 0 auto;
 }
