hotfix for contact.jsp

--- a/annuaire-web/src/main/webapp/resources/css/containers.css
+++ b/annuaire-web/src/main/webapp/resources/css/containers.css
@@ -11,6 +11,10 @@
     text-align: center;
 }
 
+.left {
+    float: left;
+}
+
 .btn-container button {
     display: inline-block;
     width: 15%;
