--- a/annuaire-web/src/main/webapp/resources/css/containers.css
+++ b/annuaire-web/src/main/webapp/resources/css/containers.css
@@ -5,20 +5,17 @@
 }
 
 .btn-container {
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
     text-align: center;
-}
-
-.left {
-    float: left;
 }
 
 .btn-container button {
     display: inline-block;
     width: 15%;
     margin: 0 auto;
+}
+
+.btn-container a {
+    text-decoration: none;
 }
 
 .btn-container a button {
