marked required fields

--- a/annuaire-web/src/main/webapp/resources/css/main.css
+++ b/annuaire-web/src/main/webapp/resources/css/main.css
@@ -203,3 +203,9 @@ label.light {
     background-color: #F44336;
 }
 
+.required label:after {
+    color: #F44336;
+    content: ' *';
+    display:inline;
+}
+
