--- a/annuaire-web/src/main/webapp/resources/css/alert.css
+++ b/annuaire-web/src/main/webapp/resources/css/alert.css
@@ -1,6 +1,5 @@
 .alert {
     padding: 20px;
-    background-color: #F44336;
     color: white;
     opacity: 1;
     transition: opacity 0.6s;
@@ -11,11 +10,11 @@
     right: 10px;
 }
 
-.alert .alert-danger{
+.alert-danger{
     background-color: #F44336;
 }
 
-.alert .alert-info{
+.alert-info{
     background-color: #4CAF50;
 }
 
