--- a/annuaire-web/src/main/webapp/resources/css/main.css
+++ b/annuaire-web/src/main/webapp/resources/css/main.css
@@ -61,6 +61,11 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    margin: 0 0 30px 0;
+    text-align: center;
+}
+
 input[type="text"],
 input[type="password"],
 input[type="date"],
