--- a/annuaire-web/src/main/webapp/resources/css/table.css
+++ b/annuaire-web/src/main/webapp/resources/css/table.css
@@ -11,7 +11,7 @@
     width: 100%;
     max-width: 100%;
     margin-bottom: 2rem;
-    background-color: #fff;
+    background-color: #fefefe;
     /* shadows and rounded borders */
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
