--- a/annuaire-web/src/main/webapp/resources/css/table.css
+++ b/annuaire-web/src/main/webapp/resources/css/table.css
@@ -1,5 +1,3 @@
-
-
 .shadow-z-1 {
     -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
     -moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
@@ -35,6 +33,11 @@
     vertical-align: top;
     border-top: 0;
 }
+
+.table > tbody > tr > td{
+    color: #5b5b5b;
+}
+
 .table > thead > tr > th {
     color: #757575;
     vertical-align: bottom;
@@ -57,14 +60,14 @@
 .table .no-border {
     border: 0;
 }
-.table-condensed > thead > tr > th,
-.table-condensed > tbody > tr > th,
-.table-condensed > tfoot > tr > th,
-.table-condensed > thead > tr > td,
-.table-condensed > tbody > tr > td,
-.table-condensed > tfoot > tr > td {
-    padding: 0.8rem;
-}
+/*.table-condensed > thead > tr > th,*/
+/*.table-condensed > tbody > tr > th,*/
+/*.table-condensed > tfoot > tr > th,*/
+/*.table-condensed > thead > tr > td,*/
+/*.table-condensed > tbody > tr > td,*/
+/*.table-condensed > tfoot > tr > td {*/
+    /*padding: 0.8rem;*/
+/*}*/
 .table-bordered {
     border: 0;
 }
